--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,12 @@
   box-sizing: border-box;
 }
 
+body {
+  font-family: 'Poppins', sans-serif;
+}
+
 .container {
-  background-color: aqua;
+  /* background-color: aqua; */
   margin: 0 auto;
   width: 80%;
   height: 100%;
@@ -19,21 +23,13 @@
 
 .img-prodotto {
   width: 380.94px;
-  height: 600px;
+  /* height: 600px; */
   /* background-color: red; */
   margin-right: 10px;
   float: left;
   margin-bottom: 10px;
   position: relative;
-}
-
-.img-prodotto-right {
-  width: 380.94px;
-  height: 600px;
-  /* background-color: red; */
-  margin-right: 0;
-  float: left;
-  margin-bottom: 10px;
+  margin-top: 40px;
 }
 
 .preferiti {
@@ -54,7 +50,7 @@
 .container-sconto-percentuale {
   background-color: rgb(250, 50, 50);
   display: inline-block;
-  width: 40px;
+  width: 50px;
   height: 30px;
   position: absolute;
   bottom: 60px;
@@ -71,21 +67,28 @@
 
 .container-sostenibilità {
   background-color: green;
-  width: 140px;
+  width: 110px;
   height: 30px;
   position: absolute;
   bottom: 60px;
   left: 50px;
   z-index: 2;
   line-height: 30px;
-  
+  margin-left: 5px;
 }
 
 .sostenibilità {
-  text-transform: uppercase;
   color: white;
   text-align: center;
   font-weight: bold;
+}
+
+#sostenibilità {
+  position: absolute;
+  bottom: 60px;
+  left: 0;
+  z-index: 2;
+  margin-left: 0;
 }
 .text-img{
   width: 380.94px;
